--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,700i,900" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <title>Document</title>
 </head>
 <body>
@@ -173,7 +174,22 @@
 
 
 
-
+<section class="why">
+  <h2>ПОЧЕМУ МЫ</h2>
+  <div>
+      <ul>
+        <li><i class="fa fa-check"></i>Своевременная реализация поставленных задач</li>
+        <li><i class="fa fa-check"></i>Профессиональный подход</li>
+        <li><i class="fa fa-check"></i>Ориентир на долгосрочное сотрудничество</li>
+        <li><i class="fa fa-check"></i>Конкурентная ценовая политика</li>
+      </ul>
+      <ul>
+        <li><i class="fa fa-check"></i>Исключительные компетенции в разработке технически сложных интернет-проектов</li>
+        <li><i class="fa fa-check"></i>Представительства в Укратне и Польше</li>
+        <li><i class="fa fa-check"></i>Опыт международного outsorcing-cотрудничества</li>
+       </ul>
+ </div>
+</section>
 
 
 
