--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 
 <section class="services">
+  <div>
    <h2>НАШИ УСЛУГИ</h2>
    <div class="flex">
       <div class="icon-block">
@@ -86,7 +87,7 @@
       </div>
    </div>
 
-
+</div>
 </section>
 
 
@@ -260,7 +261,7 @@
         <span>+380(67)6562572</span>
         <span>support@stamax.com.ua</span>
       </div>
-      <div>
+      <div class="prava">
         &copy 2018 Stamax.Все права защищены
       </div>
 
